--- a/alembic.ini
+++ b/alembic.ini
@@ -84,8 +84,9 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = driver://user:pass@localhost/dbname
-
+#sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = mssql+pyodbc://@(localdb)\MSSQLLocalDB/BinaryGame?driver=ODBC+Driver+17+for+SQL+Server&trusted_connection=yes
+#sqlalchemy.url = mssql+pyodbc://@.\MSSQLLocalDB/BinaryGame?driver=ODBC+Driver+17+for+SQL+Server&trusted_connection=yes
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
